KSS Fixed markup string extrapolation in a template

--- a/app/assets/kss/index.html
+++ b/app/assets/kss/index.html
@@ -121,7 +121,7 @@
             <!-- Markup -->
             <div class="kss-markup">
               <button class="kss-toggle" data-toggle="kss-markup--open" data-target=".kss-markup">Toggle Markup</button>
-              <pre class="kss-preformat"><code class="language-markup">{{{markup}}}</code></pre>
+              <pre class="kss-preformat"><code class="language-markup">{{markup}}</code></pre>
             </div>
 
           <!-- End list -->
