Major rewrite of gulp:guide and gulp:build tasks, uninstalled yargs, gulp-uncss

--- a/app/assets/kss/index.html
+++ b/app/assets/kss/index.html
@@ -4,19 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <title>Styleguide</title>
-    <meta name="description" content="Test.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- build:css ../assets/css/style-min.css -->
-    <!-- site:css -->
+    <meta name="description" content="Styleguide description.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- site:css -->
     <!-- endinject -->
-    <!-- endbuild -->
-    <!-- build:css ../assets/css/guide-min.css -->
+    <!-- build:css assets/css/guide-min.css -->
     <!-- guide:css -->
     <!-- endinject -->
     <!-- endbuild -->
-    <!-- build:js ../assets/js/vendor-min.js -->
     <!-- vendor:js -->
     <!-- endinject -->
-    <!-- endbuild -->
   </head>
   <body><!-- kss-header -->
 <header class="kss-header">
@@ -144,11 +140,9 @@
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script><!-- build:remove -->
     <script>window.jQuery || document.write("<script src='../bower_components/jquery/dist/jquery.js'><\/script>")</script><!-- endbuild -->
-    <!-- build:js ../assets/js/site-min.js -->
     <!-- site:js -->
     <!-- endinject -->
-    <!-- endbuild -->
-    <!-- build:js ../assets/js/guide-min.js -->
+    <!-- build:js assets/js/guide-min.js -->
     <!-- guide:js -->
     <!-- endinject -->
     <!-- endbuild -->
